--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt-browser-sync": "^2.1.3",
