--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.13.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.13.2",
     "express-session": "^1.11.3",
     "grunt": "^0.4.5",
