--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# Ignore everything
-*
-
-# But not these files...
-!.gitignore
-!screenshots/
+**/node_modules
+**/.sass-cache
+**/database
+**/bower_components
+**/.DS_Store
+**/._.DS_Store
+**/database
+notes.txt
